# 2048.hs

./: .gitignore  2048.hs  LICENSE  Readme.md  game2048.cabal  util2048.hs
app/: Main.hs
src/: Lib.hs
