name:                game2048
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chiller/game2048#readme
license:             BSD3
license-file:        LICENSE
author:              Endre Galaczi
maintainer:          galacziendre@gmail.com
copyright:           code
category:            code
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , split
                     , random
                     , transformers
  default-language:    Haskell2010

executable game
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game2048
                     , ansi-terminal
                     , transformers
  default-language:    Haskell2010

test-suite game2048-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , game2048
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chiller/game2048
